--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "antd": "^4.22.8",
     "bootstrap": "^5.2.0",
     "firebase": "^9.9.3",
+    "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^1.6.6",
     "react-dom": "^18.2.0",
